# xpm-torch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml
docs/source/: conf.py  huggingface.rst  index.rst  module.rst  optimization.rst  overview.rst  training.rst
src/xpm_torch/: __init__.py  actions.py  base.py  batchers.py  cli.py  collate.py  configuration.py  context.py  datasets.py  hooks.py  huggingface.py  learner.py  module.py  optim.py  parameters.py  results.py  schedulers.py  validation.py  xpmModel.py
src/xpm_torch/experiments/: __init__.py  configuration.py  helpers.py  services.py
src/xpm_torch/losses/: __init__.py  batchwise.py  pairwise.py
src/xpm_torch/trainers/: __init__.py  batchwise.py  context.py  distillation.py  hooks.py  multiple.py  pairwise.py  validation.py
src/xpm_torch/utils/: __init__.py  hugginface.py  huggingface.py  iter.py  logging.py  utils.py
tests/: test_documented.py  test_huggingface.py  test_module.py  test_predictive_batcher.py  test_trainstate.py
