[project]
name = "xpm-torch"
version = "0.1.0"
requires-python = ">=3.10"
keywords = ["PyTorch", "experiments", "experimaestro"]
description = "Experimaestro module for Pytorch-based experiments"
readme = "README.md"
license = {text = "GPL-3"}

dependencies = [
    "experimaestro>=1.7.1",
    "lightning>=2.4",
    "tensorboard>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xpm_torch"]