[project]
name = "xpm-torch"
version = "0.1.0"
requires-python = ">=3.10"
keywords = ["PyTorch", "experiments", "experimaestro"]
description = "Experimaestro module for Pytorch-based experiments"
readme = "README.md"
license = {text = "GPL-3"}

dependencies = [
    "experimaestro>=2.2.0",
    "lightning>=2.4",
    "safetensors>=0.4",
    "setuptools<82.0", #needed until https://github.com/tensorflow/tensorboard/issues/7003 is fixed
    "tensorboard>=2.19.0",
    "torchdata>=0.10",
]

[project.scripts]
xpm-torch = "xpm_torch.cli:main"

[dependency-groups]
test = [
    "pytest>=8",
    {include-group = "docs"},
]
docs = [
    "experimaestro>=2.2.0",
    "sphinx>=6",
    "sphinx-codeautolink>=0.15",
    "sphinx-rtd-theme>=3",
    "sphobjinv>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xpm_torch"]
