[project]
name = "xpm-torch"
dynamic = ["version"]
requires-python = ">=3.10"
keywords = ["PyTorch", "experiments", "experimaestro"]
description = "Experimaestro module for Pytorch-based experiments"
readme = "README.md"
license = {text = "GPL-3"}

dependencies = [
    "experimaestro>=2.3.4",
    "huggingface-hub>0.17",
    "lightning>=2.4",
    "safetensors>=0.4",
    # tensorboard <2.21 imports the removed-in-setuptools-82 pkg_resources;
    # fixed by tensorflow/tensorboard#7057 (issue #7003), released in tensorboard 2.21.
    # Drop this pin once we require tensorboard>=2.21.
    "setuptools<82.0",
    "tensorboard>=2.19.0",
    "torchdata>=0.10",
    "xpm-mlboard[tensorboard]>=0.2.0",
]

[project.scripts]
xpm-torch = "xpm_torch.cli:main"

[dependency-groups]
test = [
    "pytest>=8",
    {include-group = "docs"},
]
docs = [
    "experimaestro>=2.3",
    "sphinx>=6",
    "sphinx-codeautolink>=0.15",
    "sphinx-rtd-theme>=3",
    "sphobjinv>=2.3",
]
dev = [
    "docutils>=0.21.2",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "sphinx>=8.1.3",
    "sphobjinv>=2.4",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/xpm_torch/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xpm_torch"]
